[package]
name = "fireworks-erikh"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Fireworks screensaver/demo in the terminal"
repository = "https://github.com/erikh/fireworks"
homepage = "https://github.com/erikh/fireworks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "^0.27"
rand = "^0.8"
lazy_static = "^1"
signal-hook = "^0.3"
